--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "chart.js": "^3.9.1",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.6.4",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.5.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
